[package]
name = "vlak"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
env_logger = "~0.4"
error-chain = "~0.11"
futures = "~0.1"
hyper = "~0.11"
hyper-tls = "~0.1"
log = "~0.3"
native-tls = "~0.1"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
serde_urlencoded = "~0.5"
tokio-core = "~0.1"
