[package]
name = "vlak"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
chrono = "~0.4"
error-chain = "~0.11"
# futures = "~0.1"
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }
hyper = "~0.11"
hyper-tls = "~0.1"
log = "~0.3"
native-tls = "~0.1"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
serde_urlencoded = "~0.5"
simplelog = "~0.4"
term = "~0.4"
tokio-core = "~0.1"
websocket = "~0.20"
